# api-regression-platform

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  lint.yml
app/: database.py  main.py
config/: settings.yaml
config/environments/: local.yaml  staging.yaml
contracts/: openapi.yaml
docs/: ARCHITECTURE.md
scripts/: run_regression.py
src/clients/: http_client.py  service_clients.py
src/config/: settings.py
src/data/factories/: data_factory.py
src/db/: database_validator.py
src/validation/: validators.py
tests/: conftest.py
tests/auth/: test_auth_negative.py  test_auth_regression.py
tests/contract/: test_openapi_contract.py
tests/e2e/: test_order_lifecycle.py
tests/helpers/: api_assertions.py
tests/notifications/: test_notifications_regression.py
tests/orders/: test_orders_regression.py
tests/payments/: test_payments_regression.py
tests/schemas/: api_schemas.py
tests/smoke/: test_health.py
tests/unit/: test_validators.py
tests/users/: test_users_negative.py  test_users_regression.py
